<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backs_fon"
    tools:context=".SecondActivity">


    <Switch
        android:id="@+id/switch1"
        android:layout_width="126dp"
        android:layout_height="31dp"
        android:text="@string/Night_MOD"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:scaleY="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:scaleY="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/textBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SCORE"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="@+id/progressBar1"
        app:layout_constraintStart_toStartOf="@+id/progressBar1"
        app:layout_constraintTop_toTopOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/textbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PROGRESS"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="94dp" />
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>